--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -56,16 +56,14 @@ title: 4. Exploration of the Formative Learning Design Process
         playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
         -   [Addressing code syntax
             errors](#addressing-code-syntax-errors)
-        -   [Addressing access (and environment)
-            issues](#addressing-access-and-environment-issues)
-        -   [Shared community and remix
-            ability](#shared-community-and-remix-ability)
         -   [Distributed vs. self-contained approaches to asset
             creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [Shielding complexity of environment (duplication with
-            above?)](#shielding-complexity-of-environment-duplication-with-above)
-    -   [Design choices of the half-baked
-        template](#design-choices-of-the-half-baked-template)
+        -   [Shared community and remix
+            ability](#shared-community-and-remix-ability)
+        -   [Shielding complexity of
+            environment](#shielding-complexity-of-environment)
+    -   [Design choices of the starter game
+        template](#design-choices-of-the-starter-game-template)
         -   [Key Design affordances included in the game
             template](#key-design-affordances-included-in-the-game-template)
         -   [Observations on design behaviours encouraged through use of
@@ -73,13 +71,27 @@ title: 4. Exploration of the Formative Learning Design Process
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
 -   [4. Participant conflict due to lack of relevant technical
     support](#participant-conflict-due-to-lack-of-relevant-technical-support)
-    -   [Characteristics of different forms of supporting
-        documentation](#characteristics-of-different-forms-of-supporting-documentation)
+    -   [Code snippet examples](#code-snippet-examples)
+    -   [Stand-alone tutorials](#stand-alone-tutorials)
+    -   [Organising tutorials into a linear structure, specifically in
+        the form of a
+        book](#organising-tutorials-into-a-linear-structure-specifically-in-the-form-of-a-book)
     -   [Structuring and using a collection of game design
         patterns](#structuring-and-using-a-collection-of-game-design-patterns)
 -   [Chapter Discussion](#chapter-discussion)
     -   [Discussion on Authenticity of Tools and
         Resources](#discussion-on-authenticity-of-tools-and-resources)
+        -   [Empowerment implications of lifting the hood to expose
+            underlying
+            technology](#empowerment-implications-of-lifting-the-hood-to-expose-underlying-technology)
+        -   [Authenticity of processes and
+            documentation](#authenticity-of-processes-and-documentation)
+        -   [Analysing the use of code playground and templated approach
+            through the lens of
+            authenticity](#analysing-the-use-of-code-playground-and-templated-approach-through-the-lens-of-authenticity)
+        -   [Linking authenticity and
+            agency](#linking-authenticity-and-agency)
+        -   [Summary / Link](#summary-link)
     -   [On the emergent and mutual nature of the design and research
         process AND link to
         agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
@@ -1008,7 +1020,7 @@ The following sections detail affordences that I have identied
 
 IN addition I looked for affordences where small changes could provoke a high impact on the game experiences.
 
-Particpants first interacted with the game after being challenged to complete it despite it being initially set in a state which prevented progress. The game was broken in an obvious way which invited participants, in this case the player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This foundation aligns with concept of half-baked games where incompleteness or bugs in behavour are a provocation to participants to correct or to further modify them [@kynigos_children_2018]. 
+Particpants first interacted with the game after being challenged to complete it despite it being initially set in a state which prevented progress. The game was broken in an obvious way which invited participants, in this case the player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This foundation aligns with concept of half-baked games where incompleteness or bugs in behavour are a provocation to participants to correct or to further modify them [@kynigos_children_2018].
 
 
 
@@ -1103,7 +1115,7 @@ New participants in P2 all maintained a working game thus able to share at the e
 
 While Scratch has an extensive online community allowing for remixing and showcasing of games,  the community element of the design are not is explored in this section. See instead chapter six. -->
 
-Participants needed help to access and use the key affordances in code described above. In early trials with a limited number of families, I would point out the relevant part of the code and give and ask questions like, _I wonder what would happen if you changed that gravity variable?_
+Participants needed help to access and use the key affordances in code described above. In early trials with a limited number of families, I would point out the relevant part of the code and ask open questions like, _I wonder what would happen if you changed that gravity variable?_
 
 I was concerned that for larger groups this was not optimal, risking leaving some unsupported. My response was to turn to supporting documentation. While this section has described my design response to tensions stemming from code and asset authoring tools and the resultant use of starting game code template, the next section explores similar tensions related to the role of supporting resources.
 
@@ -1158,13 +1170,9 @@ To support the use of the staring processes outlined above, at the end of P1 I a
 <!--
 ![](./Pictures/quickstart_phaser_1.png){width=50%} -->
 
-
-
 As outlined above the starter template and quick activities served to address the _use_ and _modify_ stages of the UMC approach. One seeded into the community, these processes also propagated via peer learning in ways which are explored in chapters five in six. In contrast, the _create_ stage required longer input from my self, to help participants with their individual choices of what to add to the game. To address this use of time I developed more extensive help files and documentation as there were not enough facilitators. The next section outlines the different forms of documentation created.  
 
 <!-- SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge. -->
-
-#### Characteristics of different forms of supporting documentation
 
 <!-- ##### Linear and stand-alone tutorials and code snippet resources -->
 
@@ -1172,7 +1180,7 @@ As outlined above the starter template and quick activities served to address th
 by Mozilla and the Phaser developers. -->
 
 
-##### Code snippet examples
+#### Code snippet examples
 To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements.
 
 As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice.
@@ -1189,7 +1197,7 @@ Instead I began to create code snippets which shared the structure of starter ga
 
 My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
 
-##### Stand-alone tutorials
+#### Stand-alone tutorials
 
 For each code example I created a text based step-by-step documentation. Each guide was printed out for sessions and readers were encouraged to tackle them in any order. The extract outlining the use of physical maps above shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests.
 
@@ -1200,7 +1208,7 @@ As the programme developed I took greater care over the form of the tutorials an
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
 
-##### Organising tutorials into a linear structure, specifically in the form of a book
+#### Organising tutorials into a linear structure, specifically in the form of a book
 
 While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x). However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
 
@@ -1301,7 +1309,7 @@ This chapter has exposed the tensions that developed in the activity systems and
 
 <!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
 
-**Empowerment implications of lifting the hood to expose underlying technology**
+#### Empowerment implications of lifting the hood to expose underlying technology
 
 An inspirational aspect of _lifting the hood_ (see LR) on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.  
 
@@ -1316,23 +1324,22 @@ Such finding support the motivations of many youth programs which advocate explo
 
 The motivations for creating starter templates are similar. Both educators and professional template creators want to shield new users from the complexity of the underlying web-technology and instead highlight design affordances that facilitate creative agency. For the learners of this study, agency is expressed via inclusion of home interests, play with dynamics and game layout. The motivations of the professional would include experimentation to check if the framework will support desired end user features. This work helps analysis if it is worth allocating time learning the details of the framework in question.   -->
 
-**Authenticity of processes and documentation**
+#### Authenticity of processes and documentation
 
 From early stages in this design, I stopped encouraging participants to search within authentic documentation and help forum for the professional and amateur users of the Phaser javascript library. Instead, in response to participant need, I created  bespoke code examples in an online collection. Thus creating a pragmatic replica of authentic process of finding and incorporating code snippets. The careful alignment between tools code documentation and the starting template was designed to address barriers to the development skills used in authentic code based game making and professional coding. The impact of this is explored chapter five.
 
-An illustrative design tension emerged surrounding which kind of documentation to prioritise. After initially  steering participants directly to code snippets, I subsequently directed them instead to step by step tutorials which also included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over more authentic, bricolage-like (see LR) developer practices. I propose it would be best to rectify this value judgement, in future iterations of the design giving each equal weight.  EXPLAIN WHY
-
-
+An illustrative design tension emerged surrounding which kind of documentation to prioritise. After initially  steering participants directly to code snippets, I subsequently directed them instead to step by step tutorials which also included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over more authentic, bricolage-like (see LR) developer practices. I propose it would be best to rectify this value judgement, in future iterations of the design giving each equal weight.  
 
 <!-- Research on other toolsets is instructive when exploring learning design tensions involving issues of authenticity and agency. -->
 <!-- MOVE TO LR
 Existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition were explored in brief in the literature review. [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation.  -->
-**Analysing the use of code playground and templated approach through the lens of authenticity**
+
+#### Analysing the use of code playground and templated approach through the lens of authenticity
 
 The process of creating a starting template in a coding environment that had been selected to remove common barriers to coding aligns with the motivations and techniques of Microworlds and broader constructionist design principles explored in the Literature review [@resnick_design_2005]. In scratch, the ability to reduce syntax errors through block coding was adopted.  [@resnick_reflections_2005]. In my design, I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code. In Papert's Mathland Microworld where the turtle speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation and the embedded concepts of algebra are experienced by children directly rather than through instruction. A similar process happens in this design. The map of learning dimensions outlined above details some of embedded concepts brought to the fore for students to bump against in their play and experimentation. An additional set of embedded concepts are GDPs which are explore in more details in chapter five.
 
 
-**Linking authenticity and agency**
+#### Linking authenticity and agency
 
 These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild. One built as a shield area within a more genuine ecology of authentic tool use and practices.
 
@@ -1354,13 +1361,10 @@ For example, the processes of replacing a block image with a bespoke pixel sprit
 <!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
 Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
 
-
-
-
-
 <!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
 
-**Summary / Link**
+#### Summary / Link
+
 While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
 
 There is a connection in this process to foundational theories in the area of HCI and computing education.
