--- a/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
@@ -46,16 +46,14 @@
         playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
         -   [Addressing code syntax
             errors](#addressing-code-syntax-errors)
-        -   [Addressing access (and environment)
-            issues](#addressing-access-and-environment-issues)
-        -   [Shared community and remix
-            ability](#shared-community-and-remix-ability)
         -   [Distributed vs. self-contained approaches to asset
             creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [Shielding complexity of environment (duplication with
-            above?)](#shielding-complexity-of-environment-duplication-with-above)
-    -   [Design choices of the half-baked
-        template](#design-choices-of-the-half-baked-template)
+        -   [Shared community and remix
+            ability](#shared-community-and-remix-ability)
+        -   [Shielding complexity of
+            environment](#shielding-complexity-of-environment)
+    -   [Design choices of the starter game
+        template](#design-choices-of-the-starter-game-template)
         -   [Key Design affordances included in the game
             template](#key-design-affordances-included-in-the-game-template)
         -   [Observations on design behaviours encouraged through use of
@@ -63,13 +61,27 @@
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
 -   [4. Participant conflict due to lack of relevant technical
     support](#participant-conflict-due-to-lack-of-relevant-technical-support)
-    -   [Characteristics of different forms of supporting
-        documentation](#characteristics-of-different-forms-of-supporting-documentation)
+    -   [Code snippet examples](#code-snippet-examples)
+    -   [Stand-alone tutorials](#stand-alone-tutorials)
+    -   [Organising tutorials into a linear structure, specifically in
+        the form of a
+        book](#organising-tutorials-into-a-linear-structure-specifically-in-the-form-of-a-book)
     -   [Structuring and using a collection of game design
         patterns](#structuring-and-using-a-collection-of-game-design-patterns)
 -   [Chapter Discussion](#chapter-discussion)
     -   [Discussion on Authenticity of Tools and
         Resources](#discussion-on-authenticity-of-tools-and-resources)
+        -   [Empowerment implications of lifting the hood to expose
+            underlying
+            technology](#empowerment-implications-of-lifting-the-hood-to-expose-underlying-technology)
+        -   [Authenticity of processes and
+            documentation](#authenticity-of-processes-and-documentation)
+        -   [Analysing the use of code playground and templated approach
+            through the lens of
+            authenticity](#analysing-the-use-of-code-playground-and-templated-approach-through-the-lens-of-authenticity)
+        -   [Linking authenticity and
+            agency](#linking-authenticity-and-agency)
+        -   [Summary / Link](#summary-link)
     -   [On the emergent and mutual nature of the design and research
         process AND link to
         agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
