--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -97,32 +97,31 @@ To help the reader understand the data in this chapter the following notes on in
 
 
 <!-- - A quick summary of how parts of the design address three planes [is here](https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/edit?usp=sharing) -->
-## Chapter introduction and place in the thesis
 
 <!-- The working title of this chapter is Missions which aligns with a strand of the 3M game making pedagogical model developed in the course of this study. -->
+
+<!-- NOTE ## Chapter introduction and place in the thesis
 
 The purpose of this chapter is to explore how the data gathered informs thinking on two research questions of this study.  
 
 - How can game design patterns support the development of coding practices by novices?
-- How can participants build agency in an evolving community of game makers?
-
-In the last chapter we explored inclusive pedagogical methods that helped participants become part of an emerging community of game makers.
-
-This chapter analyses a sub-activity system to the creation of the whole game, namely the implementation of individual game design patterns (GDPs).
+- How can participants build agency in an evolving community of game makers? -->
 
 
 ### Chapter outline
 
-This chapter begins with reframing of game design patterns and game play design patterns which builds on the previous chapters description of the emerging learning design.
+In the last chapter I outlined use of tools in detail. In the next chapter I outline this use of key inclusive pedagogical methods that helped participants become part of an emerging community of game makers.
 
-Following this a Vignette of parent child interaction in game making process. The vignette is used to introduce an overview of interactions of that pair generated from analysis of video data.
+This chapter analyses activity at a scope between the concrete tool use and the wider cultural context of the game making community. The particular focus is the implementation of individual game design patterns (GDPs). This chapter addresses how data gathered informs thinking on the research question how can game design patterns support the development of coding practices by novices?
 
-I draw on detailed observations of participants in practice to outline how GDPs are used by participants.
+This chapter begins with reframing of game design patterns and game play design patterns which builds on the previous chapters description of the emerging learning design. Following this a Vignette of parent child interaction in game making process introduces an overview of interactions of that pair generated from analysis of video data.
+
+The chapter then focuses on the use of game design patterns by participants
+drawing on detailed observations of practice. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part if this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to designers and as a pedagogical tool for those seeking to help novice coders become inculcated into a coding community.
 
 
-The chapter then focuses on the use of game design patterns by participants in these interactions. A summary of these is available as a table.
 
-Finally a discussion section explores implications and observations from these findings in relation to existing research and concepts.
+
 
 <!-- In that community-focused analysis, the unit of activity/ analysis was the creation by individuals learners or pairs of an engaging game with an additional goal of exploring an environmental concept.  The implementation of GDPs as a unit of activity allows for a more detailed and granular exploration of the many actions and operations that comprise each pattern.  -->
 
@@ -139,45 +138,52 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-## Re-examing design patterns in this context
+
+### On GDP as a germ-cell and unit of analysis
+<!-- Explore the dividing line  -->
+
+It is thus potentially helpful to undertake a deeper analysis of the design patterns and specifically game design patterns at this point.  
 
 Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].
 
 How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
 
-### On GDP as a Germ cell and unit of Analysis
-<!-- Explore the dividing line  -->
+
+
+
+MOVE TO METHODOLOGY? Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice.
+
+This chapter proposes the use of GDPs as a germ-cell and unit of analysis
+
+While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.
+
+Mid-level construct of design / patterns heuristics []
+NOTE - Explain that this  fits into the gap of research addressed in the introduction - the challenge of sharing practice and pedagogy beyond context.  
 
 
 Both concepts are similar but different focus.
 
     Thus the germ-cell and the unit of analysis are one and the same thing, but in one case the developmental aspect is emphasised and in the other case the analytical aspect is emphasised. [@blunden_unit_2020]
 
+As a designer / researcher and practitioner both aspects are relevant and are explored separately in the following two sections.
 
-As a designer / researcher and practitioner both aspects are relevant.
+#### On GDPs as a germ concept to help practical development
 
-#### On GDPs as a germ concept to help development
+<!-- NOTE - removed -  what is the germ cell of the overall game making activity. -->
 
-The theoretical framework invites discussion on what is the germ cell of the overall game making activity.
+The theoretical framework invites discussion on the use of GDPs as a development tool to serve the advance game making community.
 
-While this concept is more typically used in a larger scope of societal activity, the principles apply this smaller scope. The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
+The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
 
-Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the s
-
-
-The concept of germ cell is relevant here as the same germ of an idea yeilded varied forms of support.
-
-
-P1 working practices yielded new ways of working and resources. Key elements including working form a template, goal setting around implementing new features, some where held in common with other groups.
+The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups.
 
 The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
 
-
 The small, quick start activities used to kick start activity game makers were an evolution from the full process of adding a game pattern. The proposed code modification instead of new code structures accelerated the process.
-
 
 For example, in the last chapter I described how the smaller quick changes could provide a scaffolded process to help participants engage with game making, the process of which was an adaptation of the foundational activity of deciding on and implementing gameplay design patterns.
 
+THIS NEEDS TO BE CLEARER. 
 
 
 #### On GDPs as a concept to help analysis
