--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -183,7 +183,7 @@ The small, quick start activities used to kick start activity game makers were a
 
 For example, in the last chapter I described how the smaller quick changes could provide a scaffolded process to help participants engage with game making, the process of which was an adaptation of the foundational activity of deciding on and implementing gameplay design patterns.
 
-THIS NEEDS TO BE CLEARER. 
+THIS NEEDS TO BE CLEARER.
 
 
 #### On GDPs as a concept to help analysis
@@ -391,13 +391,19 @@ In ask/imagine stages parent and child are able  discuss storytelling, graphical
 
 ## Observations and analysis of use of Game Design Patterns by participants
 
-### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
-
-SHIFT THIS TO Methodolgy & SUMMARISE HERE
-
-Acknowledging that these observation do not fall nearly into each of the three planes, I begin with those oriented more to cultural focus before progressing to  observations oriented chiefly to interpersonal activity and  then ending with some observation on GDPs impact on personal knowledge construction.
+NOTE HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO?
 
 In the previous chapter the role of cultural activities to engage and sustain engagement in this game making programme were examined. This chapter allows us to develop this direction to focus in on the way design patterns used are by parents, children and facilitators in in this emerging game making community.
+
+
+<!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
+
+SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
+
+<!-- Acknowledging that these observation do not fall nearly into each of the three planes, I begin with those oriented more to cultural focus before progressing to  observations oriented chiefly to interpersonal activity and  then ending with some observation on GDPs impact on personal knowledge construction. -->
+
+
+
 
 
 <!-- NOTE - ADD QUICK SUMMARY OF PREVIOUS CHAPTERS FINDINGS - IF THIS HELPS GROUND THIS SECTION -->
